Text wrapping fixes.

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
 	<script type="text/javascript" src="main.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body style="background-color: #9BC59D;">
 	<div class="box">
 		<div class="box_controls_info">
 			<div style="width: 80%; display: inline-block;">
@@ -24,12 +24,8 @@
 
 		<div class="box_text" id="text-preview">
 			<span id="pre-v" class="valid"></span>
-			<span id="pre-cv" class="current valid"></span>
-			<span id="pre-ci" class="current invalid"></span>
-			<span id="pre-i" class="invalid"></span>
-			<!--1 above and below are mutually exclusive-->
-			<span id="pre-c" class="current"></span>
-			<span id="pre-l"></span>
+			<span id="pre-cv" class="current valid"></span><span id="pre-ci" class="current invalid"></span><span id="pre-c" class="current"></span>
+			<span id="pre-i" class="invalid"></span><span id="pre-l"></span>
 		</div>
 		<input type="text" value="" id="text-input" class="box_input"/>
 	</div>
