Working analysis. Graph is shown, but with wrong parameters and ugly/hardcoded overlays and colors.

--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,13 @@
 			<span id="pre-cv" class="current valid"></span><span id="pre-ci" class="current invalid"></span><span id="pre-c" class="current"></span>
 			<span id="pre-i" class="invalid"></span><span id="pre-l"></span>
 		</div>
-		<input type="text" value="" id="text-input" class="box_input"/>
+		<input type="text" value="" id="text-input" class="box_input" autofocus/>
+	</div>
+
+	<div class="graph_box">
+		<div class="graph_line">&nbsp;</div>
+		<div class="graph" id="graph_wpms">
+		</div>
 	</div>
 </body>
 </html>
